ChangeLog gvtree V1.1-0
-----------------------

6. February 2022 : Released gvtree V1.1-0


ChangeLog gvtree V1.2-0 dev_1.2
-------------------------------

13. February 2022 : 
	- added dock widget to view other branches
	- fixed font initialization problem
	- fixed compare widget when changing branch or
	  in case of reload

20. February 2022 :
	- fixed -r
	- fixed branchlist, now ignoring "->" branches if not current
	- fixed branchlist, detached HEAD issue
	- selection is kept until RMB context menu "Reset selection" is activated
	- selection of root version blocked
	- removed compiler warnings

30. September 2022 :
	- fixed git log --graph parsing error
	- fixed -f parameter
	- add commit comment to node
	- fixed update of version information regexp
	- sorted version information tabs
	- TODO: width of commit comment to prefernces
	- TODO: maximum length of commit comment to preferences

1. October 2022 :
	- gvtree-1.3-0-beta.1