@@ -37,7 +37,7 @@
    <item row="1" column="1" colspan="2">
     <widget class="QTabWidget" name="tabWidget">
      <property name="currentIndex">
-      <number>0</number>
+      <number>1</number>
      </property>
      <widget class="QWidget" name="tabWidgetPage1">
       <property name="statusTip">
@@ -295,8 +295,8 @@
          <property name="title">
           <string>Connector Style</string>
          </property>
-         <layout class="QVBoxLayout" name="verticalLayout">
-          <item>
+         <layout class="QGridLayout" name="gridLayout_8">
+          <item row="0" column="0">
            <widget class="QRadioButton" name="rbConnectorStyle0">
             <property name="focusPolicy">
              <enum>Qt::NoFocus</enum>
@@ -316,7 +316,7 @@
             </property>
            </widget>
           </item>
-          <item>
+          <item row="0" column="1">
            <widget class="QRadioButton" name="rbConnectorStyle1">
             <property name="focusPolicy">
              <enum>Qt::NoFocus</enum>
@@ -345,7 +345,7 @@
           <string>Scale</string>
          </property>
          <layout class="QGridLayout" name="gridLayout">
-          <item row="0" column="1">
+          <item row="0" column="2">
            <widget class="QSlider" name="xfactor">
             <property name="toolTip">
              <string>Define the horizontal space in between version nodes.</string>
@@ -373,7 +373,7 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="1">
+          <item row="1" column="2">
            <widget class="QSlider" name="yfactor">
             <property name="toolTip">
              <string>Define the vertical space between version nodes.</string>
@@ -548,6 +548,43 @@
            <widget class="QPushButton" name="pbColorFileConstraint">
             <property name="text">
              <string>File Constraint</string>
+            </property>
+           </widget>
+          </item>
+         </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QGroupBox" name="groupBox_5">
+         <property name="title">
+          <string>Commit comment dimensions</string>
+         </property>
+         <layout class="QGridLayout" name="gridLayout_7">
+          <item row="0" column="1">
+           <widget class="QSpinBox" name="comment_columns">
+            <property name="toolTip">
+             <string>When commit comment is displayed in the version graph the next word is wrapped to the next line if longer than this value.</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="0">
+           <widget class="QLabel" name="label">
+            <property name="text">
+             <string>Column width</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="3">
+           <widget class="QSpinBox" name="comment_maxlen">
+            <property name="toolTip">
+             <string>Commit comments are limited to this length.</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="2">
+           <widget class="QLabel" name="label_2">
+            <property name="text">
+             <string>Maximum length</string>
             </property>
            </widget>
           </item>
